Ogre: move a cube between two knots

--- a/MoveIt/MoveIt.vcxproj.filters
+++ b/MoveIt/MoveIt.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClCompile Include="GameApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ogre3DBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Ogre3D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ogre3DBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ogre3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
